[metadata]
name = elbchecker
author = nassim babaci
author-email = nassim.babaci@cloudreach.co.uk
summary = Smoke tests for aws elb.
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: AWS
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    elbchecker

[entry_points]
console_scripts =
    elbchecker = elbchecker.__main__:main

[extras]
dev =
    pytest
